--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -15,7 +15,7 @@ header {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  width: 67%;
+  width: 65%;
 }
 
 .headerContainer {
